--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/node-fetch": "^2.5.8",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -37,6 +38,8 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "node-fetch": "^2.6.1"
   }
 }
