--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/node-fetch": "^2.5.8",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^26.6.3",
     "prettier": "^2.1.0",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
