--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -22,6 +22,7 @@
     "ignorePatterns": ["**/*.js"],
     "rules": {
         "prettier/prettier": "error",
-        "space-before-function-paren": "off"
+        "space-before-function-paren": "off",
+        "@typescript-eslint/no-unused-vars": ["off"]
     }
 }
