--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -5,11 +5,11 @@
   "username": "postgres",
   "password": "admin",
   "database": "postgres",
-  "entities": ["./src/models/*.ts"],
+  "entities": ["./src/modules/ceps/infra/typeorm/entities/*.ts"],
   "migrations": [
-      "./src/database/migrations/*.ts"
+      "./src/shared/infra/typeorm/migrations/*.ts"
   ],
   "cli": {
-      "migrationsDir": "./src/database/migrations"
+      "migrationsDir": "./src/shared/infra/typeorm/migrations"
   }
 }
