--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -23,6 +23,7 @@
     "rules": {
         "prettier/prettier": "error",
         "space-before-function-paren": "off",
-        "@typescript-eslint/no-unused-vars": ["off"]
+        "@typescript-eslint/no-unused-vars": ["off"],
+        "no-useless-constructor": "off"
     }
 }
