--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.4.0",
     "typeorm": "^0.2.31"
   }
 }
