--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@babel/node": "^7.13.0",
     "@babel/preset-env": "^7.13.5",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
@@ -42,6 +43,7 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "node-fetch": "^2.6.1",
