--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^14.14.31",
     "@types/node-fetch": "^2.5.8",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -50,6 +51,7 @@
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "uuid": "^8.3.2"
   }
 }
